fixed bug -- When mousing over name the z-index of the permissions dropdown was not high enough, so the percentage complete in progress would stand on top of it

--- a/themes/CleanFS/theme.css
+++ b/themes/CleanFS/theme.css
@@ -1207,7 +1207,7 @@ div#permissions {
   top: 60px;
   left: 0;
   margin: 0;
-  z-index: 5;
+  z-index: 101;
   padding: 5px; }
 
   div#permissions td, div#permissions th {
